<?xml version="1.0" encoding="utf-8"?>
<com.yksong.simplepx.widget.SquareLayout
    android:id="@+id/squareContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:id="@+id/imageGrid"/>
</com.yksong.simplepx.widget.SquareLayout>